# SafeHaven

./: .env.example  .mcp.json  CLAUDE.md  README.md  pyproject.toml
docs/: SafeHaven-CLAUDE-original.md  design-doc.md
docs/demo/: demo-script.md
docs/report/: design-patterns.md
safehaven/: models.py
safehaven/controller/: chat_controller.py
safehaven/llm/: __init__.py  claude_generator.py
safehaven/safety/: fsm_risk_evaluator.py
safehaven/tests/: test_adversarial_filter.py  test_controller.py  test_fsm.py  test_integration.py
safehaven/ui/: insights_screen.py
