[project]
name = "safehaven"
version = "0.1.0"
description = "Safety-aware mental health chatbot — CS6221 course project"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.mypy]
strict = true
packages = ["safehaven"]

[tool.pytest.ini_options]
testpaths = ["safehaven/tests"]
