[project]
name = "safehaven"
version = "0.1.0"
description = "Safety-aware mental health chatbot — CS6221 course project"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "kivy>=2.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pyinstaller>=6.0",
]
local = [
    "ollama>=0.4",
]

[tool.mypy]
strict = true
packages = ["safehaven"]

[[tool.mypy.overrides]]
module = ["kivy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["safehaven.ui.*"]
allow_subclassing_any = true

[tool.pytest.ini_options]
testpaths = ["safehaven/tests"]
